--- a/get-link/src/app/globals.css
+++ b/get-link/src/app/globals.css
@@ -80,3 +80,10 @@ body {
   );
   /* Add other button styling properties as needed */
 }
+
+.activeLink {
+  background: linear-gradient(90deg, #903aff 3.08%, #ff26b9 93.85%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
